data/asterisk/etc/asterisk/iptables.save
# Generated by iptables-save v1.4.14 on Fri Jun  5 17:39:39 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1:355]
:fail2ban-ASTERISK - [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 9999 -j ACCEPT
-A INPUT -i ppp32 -p tcp -m tcp --dport 9999 -j ACCEPT
-A INPUT -i ppp31 -p tcp -m tcp --dport 9999 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -i ppp32 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -i ppp31 -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5038 -j DROP
-A INPUT -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
COMMIT
# Completed on Fri Jun  5 17:39:39 2015
